--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "mini-vite",
-  "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@7.12.0",
   "description": "",
@@ -13,28 +12,7 @@
   },
   "bugs": "https://github.com/snowingfox/mini-vite/issues",
   "keywords": [],
-  "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
-    }
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
-  "files": [
-    "dist"
-  ],
+  "main": "index.cjs",
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch src",
@@ -47,21 +25,40 @@
     "vite": "mini-vite"
   },
   "bin": {
-    "mini-vite": "./bin/mini-vite"
+    "mini-vite": "bin/mini-vite"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
     "@antfu/ni": "^0.18.0",
+    "@types/connect": "^3.4.35",
+    "@types/debug": "^4.1.7",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.7.18",
+    "@types/resolve": "^1.20.2",
+    "@types/ws": "^8.5.3",
     "bumpp": "^8.2.1",
+    "connect": "^3.7.0",
+    "esbuild": "^0.15.13",
     "eslint": "^8.23.1",
     "esno": "^0.16.3",
+    "mini-vite": "../",
     "pnpm": "^7.12.0",
     "rimraf": "^3.0.2",
     "tsup": "^6.3.0",
     "typescript": "^4.8.3",
-    "vite": "^3.1.2",
-    "vitest": "^0.23.4",
-    "mini-vite": "../"
+    "vitest": "^0.23.4"
+  },
+  "dependencies": {
+    "cac": "^6.7.14",
+    "chokidar": "^3.5.3",
+    "debug": "^4.3.4",
+    "es-module-lexer": "^1.1.0",
+    "fs-extra": "^10.1.0",
+    "magic-string": "^0.26.7",
+    "picocolors": "^1.0.0",
+    "resolve": "^1.22.1",
+    "rollup": "^3.5.0",
+    "sirv": "^2.0.2",
+    "ws": "^8.11.0"
   }
 }
